Bytter tilbake til Colletors.toList()