@@ -132,7 +132,7 @@ class SøknadOversetter {
                         entry.getValue().getErSammenMedBarnet()
                     )
                 )
-                .toList());
+                .collect(Collectors.toList()));
         }
         return utenlandsoppholdPerioder;
     }
